# MarkTeX

./: .gitignore  CHANGELOG.md  LICENSE  README.md  backend-contract.md  core_ir.md  implementation-plan.md  phase.md  pyproject.toml  python-host.md  state-semantics.md  surface-syntax.md  value-resolution.md
.github/workflows/: ci.yml
docs/: marktex-0.1.md
examples/: citation.mtx  cjk.mtx  comprehensive.mtx  custom-style.mtx  hello.mtx  host.mtx  references.bib  supplemental.bib  table.mtx
examples/styles/: all-sources.mtxbs  author-page.mtxcs
python/: main.py
python/marktex/: __init__.py  directives.py  emitter.py  inline.py  lexer.py  model.py  page_expr.py  page_rules.py  pipeline.py  resolver.py  tags.py
python/tests/: test_page_rules.py  test_pipeline.py
src/marktex/: __init__.py  __main__.py  cli.py  reference.py  runtime.py  scope.py  semantics.py
src/marktex/backend/lualatex/: __init__.py  bibliography.py  emit.py
src/marktex/bibliography/: __init__.py  bibtex.py  model.py  style.py
src/marktex/core/: __init__.py  model.py
src/marktex/driver/: __init__.py  artifacts.py  compiler.py  inline.py  serde.py  surface_to_core.py
src/marktex/mos/: __init__.py  model.py  parser.py
src/marktex/schema/: __init__.py  builtins.py  registry.py
src/marktex/source/: __init__.py  cooked.py  model.py  spans.py
src/marktex/state/: __init__.py  engine.py
src/marktex/surface/: __init__.py  assemble.py  fallback.py  fallback_layer.py  grammar.py  marktex_layer.py  model.py  parser.py
tests/: test_driver_cli.py  test_mos.py
(+4 files in other folders)
